Added detailed affiche post logic

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
         <activity
             android:name=".SplashActivity"
-            android:theme="@style/SplashActivity"
+            android:theme="@style/SplashActivityStyle"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,7 +24,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".screens.main.MainActivity" />
+        <activity android:name=".screens.main.MainActivity"
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"/>
 
     </application>
 
