--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,39 +5,47 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
+        android:name="scientists.house.affiche.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NavTabs"
-        android:usesCleartextTraffic="true"
-        android:name="scientists.house.affiche.App">
+        android:usesCleartextTraffic="true">
 
         <activity
             android:name=".SplashActivity"
-            android:theme="@style/SplashActivityStyle"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/SplashActivityStyle">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".screens.main.MainActivity"
-            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"/>
+        <activity
+            android:name=".screens.main.MainActivity"
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
 
-        <service
-            android:name=".screens.base.NotificationService"
+        <receiver
+            android:name=".trackLocation.StartReceiver"
             android:enabled="true"
-            android:label="@string/app_name"
             android:exported="false">
             <intent-filter>
-                <action android:name="your.app.domain.NotificationService" />
-                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
+        </receiver>
+
+        <service
+            android:name=".trackLocation.EndlessService"
+            android:enabled="true"
+            android:exported="false">
         </service>
 
     </application>
